--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/logo.png">
+    <script
+    src="https://kit.fontawesome.com/b9f1dd2de6.js"
+    crossorigin="anonymous"
+  ></script>
     <title>Soft Floor</title>
 </head>
 <body>
-    
+    <nav>
+        <img src="img/logo.png">
+        <ul>
+            <li><a class="active" href="#home">Home</a></li>
+            <li><a href="#service">Serviços</a></li>
+            <li><a href="#who">Quem somos</a></li>
+            <li><a href="#projects">Projetos</a></li>
+            <li><a href="#contact">Contato</a></li>
+        </ul>
+        <label id="icon">
+            <i class="fas fa-bars"></i>
+        </label>
+    </nav>
+<section class="carrousel"></section>
 </body>
 </html>
