--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/logo.png">
     <script src="https://kit.fontawesome.com/b9f1dd2de6.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <title>Soft Floor</title>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <img src="img/logo.png">
-            <ul>
-                <li><a class="active" href="#home">Home</a></li>
-                <li><a href="#service">Serviços</a></li>
-                <li><a href="#who">Quem somos</a></li>
-                <li><a href="#projects">Projetos</a></li>
-                <li><a href="#contact">Contato</a></li>
-            </ul>
-            <button id="icon" onclick="abrirMenu();" class="fas fa-bars"></button>
-        </nav>
-    </header>
-    <section class="carrousel"></section>
+    <nav>
+        <img src="img/logo.png">
+        <ul>
+            <li><a class="active" href="#home">Home</a></li>
+            <li><a href="#service">Serviços</a></li>
+            <li><a href="#who">Quem somos</a></li>
+            <li><a href="#projects">Projetos</a></li>
+            <li><a href="#contact">Contato</a></li>
+        </ul>
+        <label id="icon"><i class=" fas fa-bars "></i></label>
+    </nav>
+
+    <section class="carrousel "></section>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
