--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <section class="services">
         <div class="title_text">
-            <h1>Serviços</h1>
+            <h1 class="title_h1">Serviços</h1>
             <div class="line"></div>
         </div>
         <div class="services_align">
@@ -90,6 +90,26 @@
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="who">
+        <div class="container">
+            <div class="context">
+                <div class="container_left">
+                    <div class="img-who">
+                        <img src="img/whoSection.png">
+                    </div>
+                </div>
+                <div class="container_right">
+                    <h1 class="title_h1">Quem Somos</h1>
+                    <div class="line"></div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at justo quis justo elementum molestie vel eget nisl. Quisque lobortis pharetra urna eu tempus. Integer id purus sed lorem finibus blandit. Vestibulum bibendum, justo
+                        eu dapibus convallis, justo lorem sagittis risus, non volutpat felis sapien non libero. Nulla facilisi. Maecenas ut nulla est. Maecenas vitae semper eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
+                        cubilia curae; Etiam porttitor risus sit amet est accumsan, condimentum suscipit lorem ultricies. Aenean sollicitudin finibus nulla et viverra. Maecenas et metus sit amet enim viverra vulputate nec vitae massa. Aenean porta purus
+                        mauris, sit amet convallis justo consequat euismod.</p>
                 </div>
             </div>
         </div>
