initial information section

--- a/index.html
+++ b/index.html
@@ -115,7 +115,33 @@
         </div>
     </section>
 
+    <section class="number_who">
+        <div class="information">
+            <div class="information_number">
+                <h1>2000</h1>
+                <p>Ano de fundação</p>
+            </div>
+            <div class="line-information"></div>
+            <div class="information_number">
+                <h1>300</h1>
+                <p>Projetos feitos</p>
+            </div>
+            <div class="line-information"></div>
+            <div class="information_number">
+                <h1>10</h1>
+                <p>projetos por mes</p>
+            </div>
+            <div class="line-information"></div>
+            <div class="information_number">
+                <h1>20</h1>
+                <p>funcionARIOS</p>
+            </div>
+        </div>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
+
+</html>
 
 </html>
