--- a/index.html
+++ b/index.html
@@ -139,6 +139,62 @@
         </div>
     </section>
 
+    <section class="services">
+        <div class="title_text">
+            <h1 class="title_h1">projetos</h1>
+            <div class="line"></div>
+        </div>
+        <div class="services_align">
+            <div class="row row-cols-1 row-cols-md-2 g-4">
+                <div class="col">
+                    <div class="card">
+                        <img src="img/service_park.jpeg" class="card-img-top" alt="...">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="img/service_park1.jpeg" class="card-img-top" alt="...">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="img/service_piscina.jpeg" class="card-img-top" alt="...">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="img/service_park1.jpeg" class="card-img-top" alt="...">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="partners">
+        <div class="title_text">
+            <h1 class="title_h1">parceiros</h1>
+            <div class="line"></div>
+        </div>
+        <div class="logo_partners">
+            <div class="the_partners">
+                <img src="img/logo.png" alt="">
+            </div>
+
+            <div class="the_partners">
+                <img src="img/logo.png" alt="">
+            </div>
+
+            <div class="the_partners">
+                <img src="img/logo.png" alt="">
+            </div>
+
+            <div class="the_partners">
+                <img src="img/logo.png" alt="">
+            </div>
+        </div>
+    </section>
+
+
     <script src="js/script.js"></script>
 </body>
 
