--- a/index.html
+++ b/index.html
@@ -147,22 +147,22 @@
         <div class="services_align">
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
-                    <div class="card">
+                    <div class="card-section">
                         <img src="img/service_park.jpeg" class="card-img-top" alt="...">
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card">
+                    <div class="card-section">
                         <img src="img/service_park1.jpeg" class="card-img-top" alt="...">
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card">
+                    <div class="card-section">
                         <img src="img/service_piscina.jpeg" class="card-img-top" alt="...">
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card">
+                    <div class="card-section">
                         <img src="img/service_park1.jpeg" class="card-img-top" alt="...">
                     </div>
                 </div>
@@ -172,8 +172,8 @@
 
     <section class="partners">
         <div class="title_text">
-            <h1 class="title_h1">parceiros</h1>
-            <div class="line"></div>
+            <h1 class="title_h1 partners_text">clientes</h1>
+            <div class="line left"></div>
         </div>
         <div class="logo_partners">
             <div class="the_partners">
@@ -195,7 +195,67 @@
     </section>
 
 
-    <script src="js/script.js"></script>
+    <!--FAQ-->
+    <section class="faq">
+        <div class="title_text">
+            <h1 class="title_h1">principais duvidas</h1>
+            <div class="line left"></div>
+        </div>
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        Lorem Ipsum
+                </button>
+                </h2>
+                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        Lorem Ipsum
+                </button>
+                </h2>
+                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        Lorem Ipsum
+                </button>
+                </h2>
+                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        Lorem Ipsum
+                </button>
+                </h2>
+                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        Lorem Ipsum
+                </button>
+                </h2>
+                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="js/script.js">
+    </script>
 </body>
 
 </html>
