--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a href="#service">Serviços</a></li>
             <li><a href="#who">Quem somos</a></li>
             <li><a href="#projects">Projetos</a></li>
+            <li><a href="#faq">FAQ</a></li>
             <li><a href="#contact">Contato</a></li>
         </ul>
         <label id="icon"><i class=" fas fa-bars "></i></label>
@@ -57,13 +58,20 @@
       </button>
     </div>
 
+    <!--Button whatshap-->
+    <div class="btn_whats">
+        <div class="container_whats">
+            <a href="#"><i class="fab fa-whatsapp"></i></a>
+        </div>
+    </div>
+
     <section class="services">
         <div class="title_text">
             <h1 class="title_h1">Serviços</h1>
             <div class="line"></div>
         </div>
         <div class="services_align">
-            <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="row row-cols-1 row-cols-md-3 g-4 parallax">
                 <div class="col">
                     <div class="card-service h-100">
                         <img src="img/service_park1.jpeg" class="card-img-top" alt="...">
@@ -98,7 +106,7 @@
     <section class="who">
         <div class="container">
             <div class="context">
-                <div class="container_left">
+                <div class="container_left parallax">
                     <div class="img-who">
                         <img src="img/whoSection.png">
                     </div>
