finish btn_waths

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!--Button whatshap-->
     <div class="btn_whats">
         <div class="container_whats">
-            <a href="#"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://wa.me/5519996892268"><i class="fab fa-whatsapp"></i></a>
         </div>
     </div>
 
