--- a/index.html
+++ b/index.html
@@ -262,6 +262,68 @@
             </div>
         </div>
     </section>
+
+    <section class="form">
+        <div class="title_text">
+            <h1 class="title_h1">contato</h1>
+            <div class="line left"></div>
+        </div>
+        <div class="container">
+
+            <div class="context">
+                <div class="container_left parallax">
+                    <h4>Informações</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at justo quis justo elementum molestie vel eget nisl. Quisque lobortis pharetra urna eu tempus. Integer id purus sed lorem finibus blandit. Vestibulum bibendum, justo
+                        eu dapibus convallis, justo lorem sagittis risus, non volutpat felis sapien non libero. Nulla facilisi. Maecenas ut nulla est. Maecenas vitae semper eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
+                        cubilia curae; Etiam porttitor risus sit amet est accumsan, condimentum suscipit lorem ultricies. Aenean sollicitudin finibus nulla et viverra. Maecenas et metus sit amet enim viverra vulputate nec vitae massa. Aenean porta purus
+                        mauris, sit amet convallis justo consequat euismod.</p>
+
+                    <label for="name"></label>
+                    <input type="text" id="name" placeholder="Nome completo:" maxlength="30" required>
+
+                    <label for="email"></label>
+                    <input type="email" id="email" placeholder="Email:" maxlength="30" required>
+
+                    <label for="phone"></label>
+                    <input type="number" id="phone" placeholder="Telefone:" maxlength="11" required>
+
+                    <label for="cep"></label>
+                    <input type="number" id="cep" placeholder="CEP:" maxlength="30" required>
+
+                    <label for="address"></label>
+                    <input type="text" id="address" placeholder="Endereço:" maxlength="30" required>
+
+                    <label for="number"></label>
+                    <input type="number" id="number" placeholder="Número:" maxlength="30" required>
+
+                    <label for="district"></label>
+                    <input type="text" id="district" placeholder=" Bairro:" maxlength="30" required>
+
+                    <label for="city"></label>
+                    <input type="text" id="city" placeholder=" Cidade:" maxlength="30" required>
+
+                    <label for="state"></label>
+                    <input type="text" id="state" placeholder=" Estado:" maxlength="30" required>
+
+                    <label for=""></label>
+                    <textarea></textarea> </div>
+                <div class="container_right">
+                    <h4>Missão</h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+
+                    <h4>Visão</h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+
+                    <h4>Valor</h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="footer">
+        <footer></footer>
+    </section>
     <script src="js/script.js">
     </script>
 </body>
