--- a/index.html
+++ b/index.html
@@ -278,35 +278,44 @@
                         cubilia curae; Etiam porttitor risus sit amet est accumsan, condimentum suscipit lorem ultricies. Aenean sollicitudin finibus nulla et viverra. Maecenas et metus sit amet enim viverra vulputate nec vitae massa. Aenean porta purus
                         mauris, sit amet convallis justo consequat euismod.</p>
 
-                    <label for="name"></label>
-                    <input type="text" id="name" placeholder="Nome completo:" maxlength="30" required>
+                    <div class="input_form">
+                        <label for="name"></label>
+                        <input type="text" id="name" placeholder="Nome completo:" maxlength="30" required>
 
-                    <label for="email"></label>
-                    <input type="email" id="email" placeholder="Email:" maxlength="30" required>
+                        <label for="email"></label>
+                        <input type="email" id="email" placeholder="Email:" maxlength="30" required>
+                    </div>
+                    <div class="input_form">
+                        <label for="phone"></label>
+                        <input type="number" id="phone" placeholder="Telefone:" maxlength="11" required>
 
-                    <label for="phone"></label>
-                    <input type="number" id="phone" placeholder="Telefone:" maxlength="11" required>
+                        <label for="cep"></label>
+                        <input type="text" id="cep" placeholder="CEP:" maxlength="30" required>
+                    </div>
+                    <div class="input_form">
+                        <label for="state"></label>
+                        <input type="text" id="state" placeholder=" Estado:" maxlength="30" required>
 
-                    <label for="cep"></label>
-                    <input type="number" id="cep" placeholder="CEP:" maxlength="30" required>
+
+                        <label for="number"></label>
+                        <input type="number" id="number" placeholder="Número:" maxlength="30" required>
+                    </div>
+                    <div class="input_form">
+                        <label for="district"></label>
+                        <input type="text" id="district" placeholder=" Bairro:" maxlength="30" required>
+
+                        <label for="city"></label>
+                        <input type="text" id="city" placeholder=" Cidade:" maxlength="30" required>
+                    </div>
 
                     <label for="address"></label>
-                    <input type="text" id="address" placeholder="Endereço:" maxlength="30" required>
+                    <input type="text" id="address" placeholder="Endereço:" maxlength="80" required>
 
-                    <label for="number"></label>
-                    <input type="number" id="number" placeholder="Número:" maxlength="30" required>
-
-                    <label for="district"></label>
-                    <input type="text" id="district" placeholder=" Bairro:" maxlength="30" required>
-
-                    <label for="city"></label>
-                    <input type="text" id="city" placeholder=" Cidade:" maxlength="30" required>
-
-                    <label for="state"></label>
-                    <input type="text" id="state" placeholder=" Estado:" maxlength="30" required>
 
                     <label for=""></label>
-                    <textarea></textarea> </div>
+                    <textarea></textarea>
+
+                </div>
                 <div class="container_right">
                     <h4>Missão</h4>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
