finish design input

--- a/index.html
+++ b/index.html
@@ -313,7 +313,9 @@
 
 
                     <label for=""></label>
-                    <textarea></textarea>
+                    <textarea placeholder="Mande uma mensagem para gente" maxlength="120"></textarea>
+
+                    <button id="btn_form">Enviar</button>
 
                 </div>
                 <div class="container_right">
