--- a/index.html
+++ b/index.html
@@ -327,13 +327,45 @@
 
                     <h4>Valor</h4>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+
+                    <div class="line left"></div>
+                    <h5>Ligue para nós: (19) 99689-2268</h5>
+
+
+                    <h1 class="title_h1">redes socias: </h1>
+                    <div class="line left"></div>
+
+                    <div class="social_media">
+                        <div class="social_back">
+                            <a href=""><i class="fab fa-whatsapp"></i></a>
+                        </div>
+
+                        <div class="social_back">
+                            <a href=""><i class="fab fa-instagram"></i></a>
+                        </div>
+
+                        <div class="social_back">
+                            <a href=""><i class="fab fa-facebook"></i></a>
+                        </div>
+
+                        <div class="social_back">
+                            <a href=""><i class="fab fa-whatsapp"></i></a>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
     </section>
 
     <section class="footer">
-        <footer></footer>
+        <footer>
+            <div class="logo"><img src="img/logo.png"></div>
+            <div class="mensagem">
+                <h5>Fazendo arte com a reciclagem</h5>
+            </div>
+        </footer>
+        <div class="copy"></div>
     </section>
     <script src="js/script.js">
     </script>
