--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-        <div class="carousel-inner">
+        <div class="carousel-inner" id="home">
             <div class="carousel-item active">
                 <img src="img/banner1.jpeg" class="d-block w-100" alt="...">
             </div>
@@ -65,12 +65,12 @@
         </div>
     </div>
 
-    <section class="services">
+    <section class="services reveal">
         <div class="title_text">
             <h1 class="title_h1">Serviços</h1>
             <div class="line"></div>
         </div>
-        <div class="services_align">
+        <div class="services_align" id="service">
             <div class="row row-cols-1 row-cols-md-3 g-4 parallax">
                 <div class="col">
                     <div class="card-service h-100">
@@ -103,9 +103,9 @@
         </div>
     </section>
 
-    <section class="who">
+    <section class="who reveal">
         <div class="container">
-            <div class="context">
+            <div class="context" id="who">
                 <div class="container_left parallax">
                     <div class="img-who">
                         <img src="img/whoSection.png">
@@ -123,7 +123,7 @@
         </div>
     </section>
 
-    <section class="number_who">
+    <section class="number_who reveral">
         <div class="information">
             <div class="information_number">
                 <h1>2000</h1>
@@ -147,38 +147,54 @@
         </div>
     </section>
 
-    <section class="services">
+    <section class="services reveal">
         <div class="title_text">
             <h1 class="title_h1">projetos</h1>
             <div class="line"></div>
         </div>
-        <div class="services_align">
+        <div class="services_align" id="projects">
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
-                    <div class="card-section">
-                        <img src="img/service_park.jpeg" class="card-img-top" alt="...">
+                    <div class="card-section image">
+                        <img src="img/service_park.jpeg" class="card-img-top image-img" alt="Project one">
+                        <div class="imgOverlay">
+                            <div class="imageTitle">Projeto um</div>
+                            <p class="imgDescripton">Venha conferir</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card-section">
-                        <img src="img/service_park1.jpeg" class="card-img-top" alt="...">
+                    <div class="card-section image">
+                        <img src="img/service_park1.jpeg" class="card-img-top image-img" alt="Project two">
+                        <div class="imgOverlay">
+                            <div class="imageTitle">Projeto doois</div>
+                            <p class="imgDescripton">Venha conferir</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card-section">
-                        <img src="img/banner2.jpeg" class="card-img-top imgConfigure" alt="...">
+                    <div class="card-section image">
+                        <img src="img/banner2.jpeg" class="card-img-top imgConfigure image-img" alt="Project three">
+                        <div class="imgOverlay">
+                            <div class="imageTitle">Projeto tres</div>
+                            <p class="imgDescripton">Venha conferir</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card-section">
-                        <img src="img/services.jfif" class="card-img-top" alt="...">
+                    <div class="card-section image">
+                        <img src="img/services.jfif" class="card-img-top image-img" alt="Project four">
+                        <div class="imgOverlay">
+                            <div class="imageTitle">Projeto quatro</div>
+                            <p class="imgDescripton">Venha conferir</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="partners">
+    <section class="partners reveal">
         <div class="title_text">
             <h1 class="title_h1 partners_text">clientes</h1>
             <div class="line left"></div>
@@ -204,12 +220,12 @@
 
 
     <!--FAQ-->
-    <section class="faq">
+    <section class="faq reveal">
         <div class="title_text">
             <h1 class="title_h1">principais duvidas</h1>
             <div class="line left"></div>
         </div>
-        <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion accordion-flush" id="accordionFlushExample faq">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingOne">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -263,12 +279,12 @@
         </div>
     </section>
 
-    <section class="form">
+    <section class="form reveal">
         <div class="title_text">
             <h1 class="title_h1">contato</h1>
             <div class="line left"></div>
         </div>
-        <div class="container">
+        <div class="container" id="contact">
 
             <div class="context">
                 <div class="container_left parallax">
