--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
                     <div class="card-service h-100">
                         <img src="img/service_park1.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
+
+                            <a href="projects.html"></a>
+
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
@@ -155,40 +158,48 @@
         <div class="services_align" id="projects">
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
-                    <div class="card-section image">
-                        <img src="img/service_park.jpeg" class="card-img-top image-img" alt="Project one">
-                        <div class="imgOverlay">
-                            <div class="imageTitle">Projeto um</div>
-                            <p class="imgDescripton">Venha conferir</p>
+                    <a href="projectone.html">
+                        <div class="card-section image">
+                            <img src="img/service_park.jpeg" class="card-img-top image-img" alt="Project one">
+                            <div class="imgOverlay">
+                                <div class="imageTitle">Projeto um</div>
+                                <p class="imgDescripton">Venha conferir</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col">
-                    <div class="card-section image">
-                        <img src="img/service_park1.jpeg" class="card-img-top image-img" alt="Project two">
-                        <div class="imgOverlay">
-                            <div class="imageTitle">Projeto doois</div>
-                            <p class="imgDescripton">Venha conferir</p>
+                    <a href="projecttwo.html">
+                        <div class="card-section image">
+                            <img src="img/service_park1.jpeg" class="card-img-top image-img" alt="Project two">
+                            <div class="imgOverlay">
+                                <div class="imageTitle">Projeto dois</div>
+                                <p class="imgDescripton">Venha conferir</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col">
-                    <div class="card-section image">
-                        <img src="img/banner2.jpeg" class="card-img-top imgConfigure image-img" alt="Project three">
-                        <div class="imgOverlay">
-                            <div class="imageTitle">Projeto tres</div>
-                            <p class="imgDescripton">Venha conferir</p>
+                    <a href="projecthree.html">
+                        <div class="card-section image">
+                            <img src="img/banner2.jpeg" class="card-img-top imgConfigure image-img" alt="Project three">
+                            <div class="imgOverlay">
+                                <div class="imageTitle">Projeto tres</div>
+                                <p class="imgDescripton">Venha conferir</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col">
-                    <div class="card-section image">
-                        <img src="img/services.jfif" class="card-img-top image-img" alt="Project four">
-                        <div class="imgOverlay">
-                            <div class="imageTitle">Projeto quatro</div>
-                            <p class="imgDescripton">Venha conferir</p>
+                    <a href="projectfour.html">
+                        <div class="card-section image">
+                            <img src="img/services.jfif" class="card-img-top image-img" alt="Project four">
+                            <div class="imgOverlay">
+                                <div class="imageTitle">Projeto quatro</div>
+                                <p class="imgDescripton">Venha conferir</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
