--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         </div>
         <div class="carousel-inner" id="home">
             <div class="carousel-item active">
-                <img src="img/banner1.jpeg" class="d-block w-100" alt="...">
+                <img src="img/imgaereabanner.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
                 <img src="img/baner4.jfif" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/banner3.jpeg" class="d-block w-100" alt="...">
+                <img src="img/banner1.jpeg" class="d-block w-100" alt="...">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -111,7 +111,7 @@
             <div class="context" id="who">
                 <div class="container_left parallax">
                     <div class="img-who">
-                        <img src="img/whoSection.png">
+                        <img src="img/whoSectionactu.jpg">
                     </div>
                 </div>
                 <div class="container_right">
@@ -182,7 +182,7 @@
                 <div class="col">
                     <a href="projecthree.html">
                         <div class="card-section image">
-                            <img src="img/banner2.jpeg" class="card-img-top imgConfigure image-img" alt="Project three">
+                            <img src="img/imageaera.png" class="card-img-top imgConfigure image-img" alt="Project three">
                             <div class="imgOverlay">
                                 <div class="imageTitle">Projeto tres</div>
                                 <p class="imgDescripton">Venha conferir</p>
