--- a/projecthree.html
+++ b/projecthree.html
@@ -50,7 +50,7 @@
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/banner2.jpeg" class="d-block w-100" alt="...">
+                    <img src="img/imageaera.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
                     <img src="img/service_park.jpeg" class="d-block w-100" alt="...">
