--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a class="link" href="#service">Serviços</a></li>
             <li><a class="link" href="#who">Quem somos</a></li>
             <li><a class="link" href="#projects">Projetos</a></li>
-            <li><a class="link" href="#faq">FAQ</a></li>
+            <li><a class="link" href="#faqscroll">FAQ</a></li>
             <li><a class="link" href="#contact">Contato</a></li>
         </ul>
         <label id="icon"><i class=" fas fa-bars "></i></label>
@@ -66,11 +66,11 @@
     </div>
 
     <section class="services reveal">
-        <div class="title_text">
+        <div class="title_text" id="service">
             <h1 class="title_h1">Serviços</h1>
             <div class="line"></div>
         </div>
-        <div class="services_align" id="service">
+        <div class="services_align">
             <div class="row row-cols-1 row-cols-md-3 g-4 parallax">
                 <div class="col">
                     <div class="card-service h-100">
@@ -150,12 +150,12 @@
         </div>
     </section>
 
-    <section class="services reveal">
-        <div class="title_text">
+    <section class="services reveal" >
+        <div class="title_text"  id="projects">
             <h1 class="title_h1">projetos</h1>
             <div class="line"></div>
         </div>
-        <div class="services_align" id="projects">
+        <div class="services_align">
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
                     <a href="projectone.html">
@@ -231,7 +231,7 @@
 
 
     <!--FAQ-->
-    <section class="faq reveal">
+    <section class="faq reveal" id="faqscroll">
         <div class="title_text">
             <h1 class="title_h1">principais duvidas</h1>
             <div class="line left"></div>
@@ -291,11 +291,11 @@
     </section>
 
     <section class="form reveal">
-        <div class="title_text">
+        <div class="title_text"  id="contact">
             <h1 class="title_h1">contato</h1>
             <div class="line left"></div>
         </div>
-        <div class="container" id="contact">
+        <div class="container">
 
             <div class="context">
                 <div class="container_left parallax">
