services, projects, who number, menu responsive

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </div>
                 </div>
                 <div class="container_right">
-                    <h1 class="title_h1">Quem Somos</h1>
+                    <h1 class="title_h1 left_h1">Quem Somos</h1>
                     <div class="line"></div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at justo quis justo elementum molestie vel eget nisl. Quisque lobortis pharetra urna eu tempus. Integer id purus sed lorem finibus blandit. Vestibulum bibendum, justo
                         eu dapibus convallis, justo lorem sagittis risus, non volutpat felis sapien non libero. Nulla facilisi. Maecenas ut nulla est. Maecenas vitae semper eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
@@ -157,7 +157,7 @@
         </div>
         <div class="services_align">
             <div class="row row-cols-1 row-cols-md-2 g-4">
-                <div class="col">
+                <div class="col imgConfigure">
                     <a href="projectone.html">
                         <div class="card-section image">
                             <img src="img/service_park.jpeg" class="card-img-top image-img" alt="Project one">
@@ -168,7 +168,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col">
+                <div class="col imgConfigure">
                     <a href="projecttwo.html">
                         <div class="card-section image">
                             <img src="img/service_park1.jpeg" class="card-img-top image-img" alt="Project two">
@@ -179,10 +179,10 @@
                         </div>
                     </a>
                 </div>
-                <div class="col">
+                <div class="col imgConfigure">
                     <a href="projecthree.html">
                         <div class="card-section image">
-                            <img src="img/imageaera.png" class="card-img-top imgConfigure image-img" alt="Project three">
+                            <img src="img/bannerImagemservicesatuali.png" class="card-img-top image-img img_adjust" alt="Project three">
                             <div class="imgOverlay">
                                 <div class="imageTitle">Projeto tres</div>
                                 <p class="imgDescripton">Venha conferir</p>
@@ -190,7 +190,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col">
+                <div class="col imgConfigure">
                     <a href="projectfour.html">
                         <div class="card-section image">
                             <img src="img/services.jfif" class="card-img-top image-img" alt="Project four">
@@ -359,7 +359,7 @@
                     <h5>Ligue para nós: (19) 99689-2268</h5>
 
 
-                    <h1 class="title_h1">redes socias: </h1>
+                    <h1 class="title_h1 left_h1">redes socias: </h1>
                     <div class="line left"></div>
 
                     <div class="social_media">
